path fixed for posix integration

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="home-wrapper">
             <header>
                 <div class="container">
-                        <img src="imagenes/logo.png" alt="logo estudio dev">
+                        <img src="IMAGENES/logo.png" alt="logo estudio dev">
                         <nav>
                         <a href="#home"class="active">HOME</a>
                         <a href="#servicios">SERVICIOS</a>
@@ -42,17 +42,17 @@
         <section id="servicios" class="container">
             <h2>SERVICIOS</h2>
             <div class="box"> 
-                <img src="imagenes/web-design.png" alt="web design">
+                <img src="IMAGENES/web-design.png" alt="web design">
                 <h3> WEB DESIGN</h3>
                 <p> somos expertos en web design. nuestro equipo es por mucho el mejor. Nadie nos hace competencia.</p>
             </div>
             <div class="box">
-                <img src="imagenes/web-development.png" alt="web-developoment">
+                <img src="IMAGENES/web-development.png" alt="web-developoment">
                 <h4> WEB-DEVELOPMENT </h4>
                 <P> Somos expertos en Web Development. Usamos HTML5, CSS3, Git, Bootstrap, Ruby on Rails, y JavaScript.</P>
             </div>
             <div class="box">
-                <img src="imagenes/ux-ui.png" alt="MOBILE-DEVELOPMENT">
+                <img src="IMAGENES/ux-ui.png" alt="MOBILE-DEVELOPMENT">
                 <h5>MOBILE-DEVELOPMENT</h5>
                 <P> Somos expertos en Mobile Development. Creemos que el futuro está en responsive design y no nativo.</P>
             </div>
